test/classes/ferguson/generic-inherit-record4.good
generic-inherit-record4.chpl:13: error: inheritance is not currently supported for records
